feat: update Dockerfile to install community.docker collection and modify Ansible playbook to manage Docker Compose services

--- a/ansible/deploy-raspberrypi-headless.yml
+++ b/ansible/deploy-raspberrypi-headless.yml
@@ -125,6 +125,19 @@
         path: "{{ repo_dir }}/{{ setup_script }}"
         mode: '0755'
 
+    - name: Start Docker Compose services
+      community.docker.docker_compose_v2:
+        project_src: "{{ repo_dir }}"
+        state: present
+        build: always
+      become: yes
+      register: compose_output
+
+    - name: Print Docker Compose output
+      debug:
+        msg: "{{ compose_output }}"
+      when: compose_output is defined
+
     - name: Run setup.sh
       command: ./{{ setup_script }}
       args:
@@ -136,20 +149,6 @@
       debug:
        msg: "{{ setup_output.stdout_lines }}"
       when: setup_output is defined
-
-    - name: Start Docker Compose services
-      docker_compose:
-        project_src: "{{ repo_dir }}"
-        state: present
-        build: yes
-        detached: yes
-      become: yes
-      register: compose_output
-
-    - name: Print Docker Compose output
-      debug:
-        msg: "{{ compose_output }}"
-      when: compose_output is defined
 
     - name: Reboot Raspberry Pi to apply chnages and start kiosk mode
       reboot:
