--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
         volumes:
           - ./mosquitto/config:/mosquitto/config/
         networks:
-          - zemfyre
+           - zemfyre-net
     nodered:
         build:
             context: ./nodered
@@ -21,7 +21,7 @@ services:
             - ./nodered/nodes:/data/nodes
             - /data/node_modules
         networks:
-          - zemfyre
+           - zemfyre-net
 
     influx:
         container_name: influxdb
@@ -37,7 +37,7 @@ services:
             - ./influx/data:/var/lib/influxdb2
             - ./influx/config:/etc/influxdb2
         networks:
-          - zemfyre
+           - zemfyre-net
 
     grafana:
         depends_on:
@@ -62,7 +62,8 @@ services:
         ports:
             - "${GRAFANA_PORT_EXT:-53000}:3000"
         networks:
-          - zemfyre
+           - zemfyre-net
+
     portainer:
         image: portainer/portainer-ce:latest
         container_name: portainer
@@ -73,7 +74,8 @@ services:
             - /var/run/docker.sock:/var/run/docker.sock
             - ./portainer/data:/data
         networks:
-            - zemfyre
+           - zemfyre-net
+
     admin:
         build:
             context: ./admin
@@ -83,7 +85,7 @@ services:
         ports:
             - "${ADMIN_PORT:-51850}:80"
         networks:
-            - zemfyre
+           - zemfyre-net
     api:
         build:
             context: ./api
@@ -95,10 +97,11 @@ services:
         ports:
             - "53001:3001"
         networks:
-            - zemfyre
+           - zemfyre-net
 networks:
-  zemfyre:
-    driver: bridge
+    zemfyre-net:
+       external: true
+
 
 
 
