--- a/ansible/Dockerfile
+++ b/ansible/Dockerfile
@@ -1,5 +1,5 @@
 # Ansible Dockerfile for Raspberry Pi deployment
-FROM python:3.12-slim
+FROM python:3.12
 
 # Upgrade system packages to address vulnerabilities
 RUN apt-get update && apt-get upgrade -y
