feat: add max31855 service and reader script; update docker-compose files for integration

--- a/ansible/deploy-raspberrypi-headless.yml
+++ b/ansible/deploy-raspberrypi-headless.yml
@@ -136,8 +136,8 @@
       community.docker.docker_compose_v2:
         project_src: "{{ repo_dir }}"
         files:
-          - docker-compose.yml
-          - docker-compose.override.yml
+          - docker-compose.yaml
+          - docker-compose.override.yaml
         state: present
         build: always
       become: yes
