chore: comment out unused networks in docker-compose and ansible files; update Grafana and Portainer database files

--- a/ansible/deploy-raspberrypi-headless.yml
+++ b/ansible/deploy-raspberrypi-headless.yml
@@ -137,7 +137,7 @@
         project_src: "{{ repo_dir }}"
         files:
           - docker-compose.yaml
-          - docker-compose.override.yaml
+          # - docker-compose.override.yaml
         state: present
         build: always
       become: yes
