feat: replace docker-compose.override.yaml with docker-compose.pi.yaml for Raspberry Pi deployment; update service configurations

--- a/ansible/deploy-raspberrypi-headless.yml
+++ b/ansible/deploy-raspberrypi-headless.yml
@@ -136,8 +136,7 @@
       community.docker.docker_compose_v2:
         project_src: "{{ repo_dir }}"
         files:
-          - docker-compose.yaml
-          - docker-compose.override.yaml
+          - docker-compose.pi.yaml
         state: present
         build: always
       become: yes
