Refactor Node-RED flows: Update MQTT broker references, modify model names for gas prediction, and add new debug and dataset creation nodes. Adjust admin port loading in deployment configuration.

--- a/ansible/deploy-raspberrypi-headless.yml
+++ b/ansible/deploy-raspberrypi-headless.yml
@@ -13,14 +13,18 @@
     - name: Load GRAFANA_PORT_EXT from .env file
       set_fact:
         grafana_port_ext: "{{ lookup('file', playbook_dir + '/.env.pi').splitlines() | select('match', '^GRAFANA_PORT_EXT=') | map('regex_replace', '^GRAFANA_PORT_EXT=(.*)$', '\\1') | list | first | default('3000') }}"
+        
+    - name: Load ADMIN_PORT from .env file
+      set_fact:
+        admin_port: "{{ lookup('file', playbook_dir + '/.env.pi').splitlines() | select('match', '^ADMIN_PORT=') | map('regex_replace', '^ADMIN_PORT=(.*)$', '\\1') | list | first | default('51850') }}"
     
     - name: Show loaded Grafana port
       debug:
-        msg: "GRAFANA_PORT_EXT loaded from .env.pi is: {{ grafana_port_ext }}"
+        msg: "ADMIN_PORT loaded from .env.pi is: {{ admin_port }}"
 
     - name: Set kiosk_url with dynamic port
       set_fact:
-        kiosk_url: "http://localhost:51850/"
+        kiosk_url: "http://localhost:{{ admin_port }}/"
 
     
     - name: Ensure git is installed
@@ -123,14 +127,6 @@
         src: "{{ playbook_dir }}/.env.pi"
         dest: "{{ repo_dir }}/.env"
         mode: '0644'
-
-    # - name: Run Docker Compose
-    #   community.docker.docker_compose_v2:
-    #     project_src: "{{ repo_dir }}"
-    #     state: present
-    #     build: always
-    #   become: yes
-    #   register: compose_output
 
     - name: Run Docker Compose (with Pi override)
       community.docker.docker_compose_v2:
