--- a/ansible/roles/kiosk/tasks/main.yml
+++ b/ansible/roles/kiosk/tasks/main.yml
@@ -1,56 +1,98 @@
 ---
-- name: Install kiosk packages
-  apt:
-    name: "{{ kiosk_packages }}"
+# Kiosk role main tasks
+
+- name: Check if desktop environment is installed and set desktop_mode
+  stat:
+    path: /etc/xdg/lxsession/LXDE-pi
+  register: lxde_check
+
+- name: Override desktop_mode based on detection
+  set_fact:
+    desktop_mode: "{{ lxde_check.stat.exists }}"
+
+- name: Set kiosk_url based on mode
+  set_fact:
+    kiosk_url: "http://localhost:{{ admin_port }}/"
+
+- name: Debug kiosk setup mode
+  debug:
+    msg: "Setting up {{ 'desktop' if desktop_mode else 'headless' }} kiosk mode. URL: {{ kiosk_url }}"
+
+- name: Create kiosk user if it doesn't exist
+  user:
+    name: "{{ kiosk_user }}"
+    shell: /bin/bash
+    create_home: yes
     state: present
-    update_cache: true
-  become: true
 
-- name: Create kiosk user home directory
-  file:
-    path: "/home/{{ kiosk_user }}"
-    state: directory
-    owner: "{{ kiosk_user }}"
-    group: "{{ kiosk_user }}"
-    mode: '0755'
-  become: true
+- name: Ensure Chromium and kiosk tools are installed (Desktop mode)
+  apt:
+    name:
+      - chromium-browser
+      - unclutter
+      - xdotool
+    state: present
+    update_cache: yes
+  when: desktop_mode
 
-- name: Create .xinitrc for kiosk mode
+- name: Ensure Chromium and kiosk tools are installed (Headless mode)
+  apt:
+    name:
+      - xserver-xorg
+      - x11-xserver-utils
+      - xinit
+      - openbox
+      - unclutter
+      - chromium-browser
+    state: present
+    update_cache: yes
+  when: not desktop_mode
+
+- name: Create LXDE autostart file from template for desktop kiosk setup
+  template:
+    src: lxde-autostart.j2
+    dest: "/etc/xdg/lxsession/LXDE-pi/autostart"
+    owner: root
+    group: root
+    mode: '0644'
+  when: desktop_mode
+
+- name: Create .xinitrc from template for headless X11 + Chromium kiosk setup
   template:
     src: xinitrc.j2
     dest: "/home/{{ kiosk_user }}/.xinitrc"
     owner: "{{ kiosk_user }}"
     group: "{{ kiosk_user }}"
     mode: '0755'
-  become: true
+  when: not desktop_mode
 
-- name: Create getty override directory
+- name: Add kiosk user to necessary groups
+  user:
+    name: "{{ kiosk_user }}"
+    groups: 
+      - video
+      - audio
+      - input
+      - tty
+    append: yes
+
+- name: Set up auto-login for kiosk user (headless mode)
+  lineinfile:
+    path: /etc/systemd/system/getty@tty1.service.d/override.conf
+    line: "ExecStart=-/sbin/agetty --autologin {{ kiosk_user }} --noclear %I $TERM"
+    regexp: "^ExecStart="
+    create: yes
+    owner: root
+    group: root
+    mode: '0644'
+  when: not desktop_mode
+  notify: reload systemd
+
+- name: Create systemd override directory for getty
   file:
     path: /etc/systemd/system/getty@tty1.service.d
     state: directory
     owner: root
     group: root
     mode: '0755'
-  become: true
-
-- name: Enable automatic login for kiosk user
-  lineinfile:
-    path: /etc/systemd/system/getty@tty1.service.d/autologin.conf
-    line: "ExecStart=-/sbin/agetty --autologin {{ kiosk_user }} --noclear %I $TERM"
-    regexp: "^ExecStart="
-    create: true
-    owner: root
-    group: root
-    mode: '0644'
-  become: true
-  notify: reload systemd
-
-- name: Configure automatic X11 startup in .bashrc
-  lineinfile:
-    path: "/home/{{ kiosk_user }}/.bashrc"
-    line: "[ -z \"$DISPLAY\" ] && [ \"$(tty)\" = \"/dev/tty1\" ] && startx"
-    create: true
-    owner: "{{ kiosk_user }}"
-    group: "{{ kiosk_user }}"
-    mode: '0644'
-  become: true
+  when: not desktop_mode
