Enhance Grafana integration: add API fetching for dashboards, update CORS settings in Nginx, and configure Grafana for embedding. Update Docker Compose files for improved service configuration.

--- a/docker-compose.pi.yaml
+++ b/docker-compose.pi.yaml
@@ -51,6 +51,7 @@ services:
             - GF_AUTH_ANONYMOUS_ENABLED=${GRAFANA_AUTH_ANONYMOUS_ENABLED}
             - GF_AUTH_ANONYMOUS_ORG_ROLE=${GRAFANA_AUTH_ANONYMOUS_ORG_ROLE}
             - GF_AUTH_DISABLE_LOGIN_FORM=${GRAFANA_AUTH_DISABLE_LOGIN_FORM}
+            - GF_HTTP_ALLOW_ORIGIN=*
 
         volumes:
             - ./grafana/data:/var/lib/grafana
