feat: add whatwg-url library and update dependencies
- Added whatwg-url library (version 5.0.0) with utility functions for URL handling.
- Updated package.json to include whatwg-url as a dependency for node-fetch.
- Updated package-lock.json to reflect the addition of whatwg-url and its dependencies.

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -94,8 +94,6 @@ services:
             dockerfile: Dockerfile
         container_name: admin
         restart: always
-        environment:
-            - GRAFANA_API_TOKEN=glsa_MzypDsGjFIYtnE0TxEg9r2pf54Xod9md_23b77887
         ports:
             - "${ADMIN_PORT:-51850}:80"
         networks:
@@ -106,6 +104,8 @@ services:
             dockerfile: Dockerfile
         container_name: zemfyre-api
         restart: always
+        environment:
+            - GRAFANA_API_TOKEN=${GRAFANA_API_TOKEN}
         volumes:
           - /var/run/docker.sock:/var/run/docker.sock
         ports:
