feat: add Grafana API token and update environment configuration; remove unused Docker Compose file and add override for services

--- a/ansible/.env.pi
+++ b/ansible/.env.pi
@@ -8,4 +8,6 @@ GRAFANA_PASSWORD=admin
 GRAFANA_AUTH_ANONYMOUS_ENABLED=true
 GRAFANA_AUTH_ANONYMOUS_ORG_ROLE=Admin
 GRAFANA_AUTH_DISABLE_LOGIN_FORM=true
+GRAFANA_VOLUME=./grafana/data
+GRAFANA_API_TOKEN=glsa_MzypDsGjFIYtnE0TxEg9r2pf54Xod9md_23b77887
 ADMIN_PORT=51850
