--- a/docker-compose.override.yaml
+++ b/docker-compose.override.yaml
@@ -1,30 +1,110 @@
 services:
-  influx:
-    networks: []  # 🚫 override to remove networks key
-
-  grafana:
-    networks: []
-
-  mosquitto:
-    networks: []
 
   nginx:
-    networks: []
-    depends_on: []
+    image: nginx
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - grafana
+
+  mosquitto:
+    image: eclipse-mosquitto
+    restart: always
+    ports:
+      - "${MOSQUITTO_PORT_EXT}:1883"
+      - "${MOSQUITTO_WS_PORT_EXT}:9001"
+    volumes:
+      - ./mosquitto/config:/mosquitto/config/
 
   nodered:
-    networks: []
+    build:
+      context: ./nodered
+      dockerfile: Dockerfile
+    restart: always
+    ports:
+      - "${NODERED_PORT_EXT:-51880}:1880"
+    volumes:
+      - ./nodered/data:/data
+      - ./nodered/nodes:/data/nodes
+      - /data/node_modules
+
+  influx:
+    container_name: influxdb
+    image: influxdb:alpine
+    restart: unless-stopped
+    environment:
+      - INFLUXDB_INIT_ORG=Zemfyre
+      - INFLUXDB_INIT_BUCKET=ZUS80LP
+      - INFLUXDB_LOG_LEVEL=debug
+    ports:
+      - "${INFLUXDB_PORT_EXT:-58086}:8086"
+    volumes:
+      - ./influx/data:/var/lib/influxdb2
+      - ./influx/config:/etc/influxdb2
+
+  grafana:
+    depends_on:
+      - influx
+    container_name: grafana
+    restart: always
+    build:
+      context: ./grafana
+      dockerfile: Dockerfile
+    user: "grafana"
+    environment:
+      - GF_SECURITY_ADMIN_USER=${GRAFANA_USERNAME}
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASSWORD}
+      - GF_AUTH_ANONYMOUS_ENABLED=${GRAFANA_AUTH_ANONYMOUS_ENABLED}
+      - GF_AUTH_ANONYMOUS_ORG_ROLE=${GRAFANA_AUTH_ANONYMOUS_ORG_ROLE}
+      - GF_AUTH_DISABLE_LOGIN_FORM=${GRAFANA_AUTH_DISABLE_LOGIN_FORM}
+      - GF_HTTP_ALLOW_ORIGIN=*
+    volumes:
+      - ./grafana/data:/var/lib/grafana
+      - ./grafana/config/grafana.ini:/etc/grafana/grafana.ini
+      - ./grafana/provisioning:/etc/grafana/provisioning
+    ports:
+      - "${GRAFANA_PORT_EXT:-53000}:3000"
 
   portainer:
-    networks: []
+    image: portainer/portainer-ce:latest
+    container_name: portainer
+    restart: always
+    ports:
+      - "59000:9000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./portainer/data:/data
 
   admin:
-    networks: []
+    build:
+      context: ./admin
+      dockerfile: Dockerfile
+    container_name: admin
+    restart: always
+    ports:
+      - "${ADMIN_PORT:-51850}:80"
 
   api:
-    networks: []
+    build:
+      context: ./api
+      dockerfile: Dockerfile
+    container_name: zemfyre-api
+    restart: always
+    environment:
+      - GRAFANA_API_TOKEN=${GRAFANA_API_TOKEN}
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+    ports:
+      - "53001:3001"
 
   max31855:
-    networks: []
-
-networks: {}  # override custom networks definition
+    build:
+      context: ./max31855
+      dockerfile: Dockerfile
+    container_name: max31855_reader
+    privileged: true
+    devices:
+      - /dev/gpiomem
+    restart: unless-stopped
