feat: add docker-compose.pi.yaml for Raspberry Pi deployment; remove deprecated docker-compose.override.yaml

--- a/ansible/deploy-kiosk.yml
+++ b/ansible/deploy-kiosk.yml
@@ -112,6 +112,8 @@
     - name: Run Docker Compose (Headless mode with Pi override)
       community.docker.docker_compose_v2:
         project_src: "{{ repo_dir }}"
+        files:
+          - docker-compose.pi.yaml
         state: present
         build: always
       become: yes
