feat: update service dependencies for Grafana to include nginx; update Portainer database

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -53,6 +53,7 @@ services:
     grafana:
         depends_on:
             - influx
+            - nginx
         container_name: grafana
         restart: always
         build:
