--- a/docker-compose.pi.yaml
+++ b/docker-compose.pi.yaml
@@ -6,8 +6,6 @@ services:
       - "80:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
-    depends_on:
-      - grafana
 
   mosquitto:
     image: eclipse-mosquitto
@@ -47,6 +45,7 @@ services:
   grafana:
     depends_on:
       - influx
+      - nginx
     container_name: grafana
     restart: always
     build:
