--- a/docker-compose.pi.yaml
+++ b/docker-compose.pi.yaml
@@ -4,6 +4,7 @@ services:
     image: nginx
     ports:
       - "80:80"
+    command: ["nginx", "-g", "daemon off;"]
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf
 
