fix: update network configuration for zemfyre-net to use bridge driver; update Portainer database

--- a/docker-compose.pi.yaml
+++ b/docker-compose.pi.yaml
@@ -123,11 +123,9 @@ services:
         restart: unless-stopped
         networks:
            - zemfyre-net
+
 networks:
-    zemfyre-net:
-       external: true
-
-
-
+  zemfyre-net:
+    driver: bridge
 
 
